fix form spacing

--- a/src/components/SignUp/sign-up.scss
+++ b/src/components/SignUp/sign-up.scss
@@ -46,7 +46,7 @@
   width: 100%;
   position: relative;
   flex-direction: column;
-  // gap: 1.5rem;
+  gap: 1rem;
 
   @include desktop {
     flex-direction: row;
@@ -73,7 +73,6 @@
     font-size: 0.75rem;
     color: $clr-accent-error;
     align-self: flex-start;
-    margin-block: 0.5rem;
     padding-left: 1.5rem;
     @include desktop {
       position: absolute;
